force-app/main/default/objects/BMCServiceDesk__Normalization_Condition__c/BMCServiceDesk__Normalization_Condition__c.object-meta.xml
<CustomObject>
    <description>Stores the conditions defined for normalization rules, including the field name, operator, and field value.</description>
    <label>Normalization Condition</label>
    <nameField>
        <displayFormat>Condition-{0000}</displayFormat>
        <label>Normalization Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Normalization Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>