force-app/main/default/objects/BMCServiceDesk__Normalization_Condition__c/fields/BMCServiceDesk__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Field_Value__c</fullName>
    <label>Field Value</label>
    <type>TextArea</type>
</CustomField>