force-app/main/default/objects/BMCServiceDesk__Normalization_Condition__c/fields/BMCServiceDesk__FKNormalization_Rule__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKNormalization_Rule__c</fullName>
    <label>Normalization Rule</label>
    <referenceTo>BMCServiceDesk__Normalization_Rule__c</referenceTo>
    <relationshipLabel>Normalization Conditions</relationshipLabel>
    <relationshipName>Normalization_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>