force-app/main/default/objects/BMCServiceDesk__Normalization_Condition__c/fields/BMCServiceDesk__Operator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Operator__c</fullName>
    <label>Operator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>